# Waffle-Cooker

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.gradle
documentation/: README.md  activity_diagram.drawio  program_usage.md
documentation/exceptions/: README.md
documentation/requirements/: README.md
resources/: wordlist.txt
scripts/: build_and_run.sh
src/: main.rs
src/main/java/com/waffle/cooker/: MainClass.java
src/main/resources/documentation/: README.md
src/main/resources/documentation/exceptions/: README.md
src/main/resources/documentation/requirements/: FR1.md  FR2.md  FR3.md  FR4.md  FR5.md  README.md
src/test/java/com/waffle/cooker/unit/: MainClassTest.java
