[package]
name = "waffle_cooker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thirtyfour = "0.31.0"
tokio = { version = "1.36.0", features = ["full"] }
scraper = "0.19.0"
gl="0.14.0"
glfw="0.55.0"
